Dodanie tabeli sudoku

--- a/Sudoku.css
+++ b/Sudoku.css
@@ -1,1 +1,16 @@
+table.sudoku{
+    border: 5px solid black;
+    border-collapse: collapse;  
+}
+td{
+    border: 2px solid black ;
+    width: 30px;
+    height: 30px;
+}
+#c,#f{
+    border-bottom: 4px solid black;
+}
+#a3,#b3,#c3,#d3,#e3,#f3,#g3,#h3,#i3,#a6,#b6,#c6,#d6,#e6,#f6,#g6,#h6,#i6{
+    border-right: 4px solid black;
+}
 
