--- a/Sudoku.css
+++ b/Sudoku.css
@@ -1,14 +1,30 @@
+body{
+    display: flex;
+    flex-wrap: wrap;
+}
 header{
     display: flex;
     background-color: darksalmon;
     height: 100px;
+    width: 100%;
     justify-content: center;
+    align-items: center;
+    margin: 5px;
 }
 nav{
     background-color: chocolate;
+    width: 200px;
+    height: 500px;
+    margin: 5px;
+
 }
 li{
     margin: 2px;
+}
+article{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .rzad{
     border: 5px solid black;
@@ -23,6 +39,9 @@ li{
 td{
     width: 50px;
     height: 50px;
+}
+table{
+    border-collapse: collapse; 
 }
 /* }
 #c,#f{
