--- a/Sudoku.css
+++ b/Sudoku.css
@@ -1,6 +1,5 @@
-body{
+main{
     display: flex;
-    flex-wrap: wrap;
 }
 header{
     display: flex;
@@ -13,8 +12,8 @@ header{
 }
 nav{
     background-color: chocolate;
-    width: 200px;
-    height: 500px;
+    width: 225px;
+    height: 807px;
     margin: 5px;
 
 }
@@ -23,8 +22,12 @@ li{
 }
 article{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 900px;
+    flex-shrink: 200;
+    
 }
 .rzad{
     border: 5px solid black;
@@ -43,6 +46,9 @@ td{
 table{
     border-collapse: collapse; 
 }
+/* .klik{
+    margin: 10px;
+} */
 /* }
 #c,#f{
     border-bottom: 4px solid black;
